--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,20 @@
-# Prerequisites
-*.d
+.DS_Store
+.texpadtmp
+# main.pdf
 
-# Object files
-*.o
-*.ko
-*.obj
-*.elf
+# tmp files of ppt,excel documents
+~$*
+~$figures.xlsx
+~$figures.pptx
 
-# Linker output
-*.ilk
-*.map
-*.exp
-
-# Precompiled Headers
-*.gch
-*.pch
-
-# Libraries
-*.lib
-*.a
-*.la
-*.lo
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
-*.exe
+*.toc
+*.synctex(busy)
+*.aux
+*.bbl
+*.blg
+*.log
+*.synctex.gz
+*.fls
+*.fdb_latexmk
 *.out
-*.app
-*.i*86
-*.x86_64
-*.hex
 
-# Debug files
-*.dSYM/
-*.su
-*.idb
-*.pdb
-
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
